shop-manifests/allow-orders-products-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: allow-orders-products-egress

  namespace: shop


spec:

  podSelector:

    matchLabels:

      app: orders-api


  policyTypes:

  - Egress


  egress:

  - to:

    - podSelector:

        matchLabels:

          app: products-api


    ports:

    - protocol: TCP
      port: 8000
