shop-manifests/allow-orders-products.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:

  name: allow-orders-products

  namespace: shop


spec:

  podSelector:

    matchLabels:

      app: products-api


  policyTypes:

  - Ingress


  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: orders-api


    ports:

    - protocol: TCP
      port: 8000
